--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
-    "firebase": "^12.3.0",
+    "firebase": "^12.4.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
@@ -22,6 +22,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.2.1",
     "react-hot-toast": "^2.6.0",
     "sonner": "^2.0.7",
     "swr": "^2.3.6",
