--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "axios": "^1.11.0",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "emoji-mart": "^5.6.0",
     "firebase": "^12.3.0",
+    "framer-motion": "^12.23.24",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
@@ -26,8 +28,8 @@
     "react": "19.1.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "19.1.0",
-    "recharts": "^3.2.1",
     "react-hot-toast": "^2.6.0",
+    "recharts": "^3.2.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "swr": "^2.3.6",
@@ -38,6 +40,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
