--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "emoji-mart": "^5.6.0",
     "firebase": "^12.3.0",
     "framer-motion": "^12.23.24",
+    "isomorphic-dompurify": "^2.30.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
@@ -31,8 +32,8 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.2.1",
-    "socket.io-client": "^4.8.1",
     "remark-gfm": "^4.0.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
