--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "axios": "^1.11.0",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
+    "docx": "^9.5.1",
     "emoji-mart": "^5.6.0",
+    "file-saver": "^2.0.5",
     "firebase": "^12.3.0",
     "framer-motion": "^12.23.24",
     "isomorphic-dompurify": "^2.30.0",
@@ -38,12 +40,14 @@
     "swr": "^2.3.6",
     "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2",
-    "tw-animate-css": "^1.3.8"
+    "tw-animate-css": "^1.3.8",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/file-saver": "^2.0.7",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
